8240576: JVM crashes after transformation in C2 IdealLoopTree::merge_many_backedges

Reviewed-by: kvn